src/test/deca/codegen/invalid/AvecObjet/stack_overflow_recursif.ass
; test de la taille de la pile
	TSTO #8	; Taille maximale de la pile
	ADDSP #6
	BOV stack_overflow_error
; start main program
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de A
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD code.A.f, R0
	STORE R0, 5(GB)
; Main program
; Beginning of main declarations:
; new ligne 8
	NEW #1, R2
	BOV tas_plein
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.A
	POP R2
	STORE R2, 6(GB)
; Beginning of main instructions:
	ADDSP #2
	LOAD 6(GB), R3
	STORE R3, 0(SP)
	LOAD #1, R3
	STORE R3, -1(SP)
	LOAD 0(SP), R3
	CMP #null, R3
	BEQ dereferencement_null
	LOAD 0(R3), R3
	BSR 2(R3)
	SUBSP #2
	LOAD R0, R2
	HALT
; end main program
code.Object.equals:
	LOAD -2(LB), R0
	LOAD -3(LB), R1
	CMP R0, R1
	BEQ equal
not_equal:
	LOAD #0, R0
	RTS
equal:
	LOAD #1, R0
	RTS
; Initialisation des champs de la classe A
init.A:
	RTS
code.A.f:
	TSTO #1
	PUSH R2
	ADDSP #2
	LOAD -2(LB), R2
	STORE R2, 0(SP)
	LOAD -3(LB), R2
	ADD #1, R2
	BOV overflow_error
	STORE R2, -1(SP)
	LOAD 0(SP), R2
	CMP #null, R2
	BEQ dereferencement_null
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #2
	BRA fin.A.f
	BRA fin.A.f
etiq_fin0:
	WSTR "Erreur : sortie de la methode fin.A.fsans return"
	WNL
	ERROR
fin.A.f:
	POP R2
	RTS
stack_overflow_error:
	WSTR "Error : Stack Overflow"
	WNL
	ERROR
overflow_error:
	WSTR "Error : Overflow during arithmetic operation"
	WNL
	ERROR
tas_plein:
	WSTR "Error : Heap OverFlow"
	WNL
	ERROR
dereferencement_null:
	WSTR "Error : Dereferencing null"
	WNL
	ERROR
; end main program
